--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.17",
+        "axios": "^1.6.7",
         "chart.js": "^4.4.0",
         "eslint": "8.41.0",
         "eslint-config-next": "13.4.3",
+        "express": "^4.18.2",
+        "mongodb": "^6.3.0",
         "next": "^13.5.6",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
